kube-system/vault/vault-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault-dashboard-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.web.bluehairfreak.com`)
      kind: Rule
      services:
        - name: vault
          port: 8200
          namespace: kube-system
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vault-dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vault.web.bluehairfreak.com`)
      kind: Rule
      services:
        - name: vault
          port: 8200
          namespace: kube-system
